--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <i class="fas fa-envelope"></i>
                   Email
                   </h3>
-                  <a href="mailto:constantine.san7@gmail.com" class="contacts-text">constantine.san7@gmail.com</a>
+                  <a href="mailto:constantine.resume@gmail.com" class="contacts-text">constantine.resume@gmail.com</a>
               </div>
 
               <div class="contacts-item">
@@ -104,7 +104,7 @@
               <address class="about-address">Krzyki, Wrocław</address>
               <div class="about-contacts">
                 <a href="tel:576312364" class="about-info"><b>tel:</b> 576 312 364</a>
-                <a href="mailto:constantine.san7@gmail.com" class="about-info"><b>e-mail:</b>kostiantynkozhurov00@gmail.com</a>
+                <a href="mailto:constantine.resume@gmail.com" class="about-info"><b>e-mail:</b>constantine.resume@gmail.com</a>
                 <a href="https://github.com/constantinesan77/" class="about-info"><b>github:</b> constantinesan77</a>
               </div>
             </div>
